--- a/app/src/main/res/layout/report_activity.xml
+++ b/app/src/main/res/layout/report_activity.xml
@@ -130,7 +130,7 @@
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/radioButton_Small"
