--- a/app/src/main/res/layout/join_dialog_layout.xml
+++ b/app/src/main/res/layout/join_dialog_layout.xml
@@ -16,11 +16,8 @@
         <ImageView
             android:id="@+id/img_wasted"
             android:layout_width="139dp"
-            android:layout_height="151dp"
-            android:background="@drawable/googleg_standard_color_18"
-            android:scrollbarTrackHorizontal="@drawable/googleg_standard_color_18"
-            app:srcCompat="@drawable/googleg_standard_color_18"
-            tools:srcCompat="@drawable/googleg_standard_color_18" />
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,6 +42,8 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="20dp"
                     android:text="TextView" />
+
+
             </LinearLayout>
 
             <LinearLayout
@@ -99,20 +98,18 @@
         android:layout_marginLeft="0dp">
 
         <Button
-            android:layout_width="129dp"
+            android:id="@+id/btn_join"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="Detail"
-            android:textColor="@color/white"
             android:background="@drawable/button_join"
-            android:id="@+id/btn_join"/>
+            android:text="Detail"
+            android:textColor="@color/white" />
 
         <ImageButton
             android:id="@+id/btn_direction"
-            android:layout_width="60dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/button_direction" />
-
+            android:background="@drawable/ic_directions_black_24dp" />
     </LinearLayout>
 
 
