--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -22,8 +22,7 @@
             android:textSize="30dp"
             android:textStyle="bold" />
 
-        <TextView
-
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -36,7 +35,9 @@
             android:layout_weight="1"
             android:text="Logout"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textAllCaps="false"
+            android:background="@color/transparent"/>
 
     </RelativeLayout>
 
@@ -135,7 +136,7 @@
 
             <TextView
                 android:textColor="@color/white"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="BirthDay: "/>
@@ -183,7 +184,7 @@
             <TextView
                 android:textColor="@color/white"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
+                android:layout_height="wrap_content"
                 android:text="Job: "
                 android:textSize="@dimen/sp_20" />
 
@@ -205,6 +206,18 @@
                 android:textColor="@color/green"
                 android:src="@drawable/ic_arrow_forward_black_24dp"
                 />
+
+            <Button
+                android:id="@+id/btn_dat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:background="@color/transparent"
+                android:text="Feeback"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
