--- a/app/src/main/res/layout/forgot_main.xml
+++ b/app/src/main/res/layout/forgot_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ForgotActivity">
 
     <TextView
         android:id="@+id/tv_forgetpassword"
@@ -81,7 +81,7 @@
         app:layout_constraintVertical_bias="0.053" />
 
     <ImageButton
-        android:id="@+id/button"
+        android:id="@+id/btnSend"
         android:layout_width="124dp"
         android:layout_height="56dp"
         android:layout_marginStart="8dp"
