--- a/app/src/main/res/layout/passwordchanger.xml
+++ b/app/src/main/res/layout/passwordchanger.xml
@@ -1,130 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    android:background="@color/green"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ForgotActivity"
+    android:layout_weight="10"
+    >
 
-    <TextView
-        android:id="@+id/tv_forgetpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="150px"
-        android:background="@color/green"
-        android:elevation="0.01sp"
-        android:text="CHANGE PASSWORD"
-        android:textColor="@color/white"
-        android:textSize="80px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.26"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.246"></TextView>
-
-    <TextView
-        android:id="@+id/tv_Email"
-        android:layout_width="153dp"
-        android:layout_height="28dp"
-        android:background="@color/green"
-        android:elevation="0.01sp"
-        android:text="New Password"
-        android:textColor="@color/white"
-        android:textSize="50px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.395"></TextView>
-
-    <TextView
-        android:id="@+id/tv_NewPassword"
-        android:layout_width="210dp"
-        android:layout_height="28dp"
-        android:background="@color/green"
-        android:elevation="0.01sp"
-        android:text="Re-Enter New Password"
-        android:textColor="@color/white"
-        android:textSize="50px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.154"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.512"></TextView>
-
-    <TextView
-        android:id="@+id/tv_backgroundcolor"
-        android:layout_width="1080px"
-        android:layout_height="1580px"
-        android:background="@color/green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"></TextView>
-
-    <EditText
-        android:id="@+id/et_Newpassword"
-        android:layout_width="900px"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.446" />
+        android:layout_weight="9"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/et_Renewpassword"
-        android:layout_width="900px"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.578" />
+        <TextView
+            android:id="@+id/tv_forgetpassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:background="@color/green"
+            android:elevation="0.01sp"
+            android:text="CHANGE PASSWORD"
+            android:textColor="@color/white"
+            android:textSize="30sp"></TextView>
 
-    <ImageView
-        android:id="@+id/imgview_Background"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:src="@drawable/ic_arrow_back_black_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.035"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.053" />
+        <TextView
+            android:id="@+id/tv_Email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="30dp"
+            android:background="@color/green"
+            android:elevation="0.01sp"
+            android:text="New Password"
+            android:textColor="@color/white"
+            android:textSize="20sp"></TextView>
 
-    <ImageButton
-        android:id="@+id/btn_Change"
-        android:layout_width="124dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="140dp"
-        android:background="@drawable/roundshapebutton"
-        android:src="@drawable/green_arrow_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        <EditText
+            android:id="@+id/et_Newpassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/tv_NewPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="30dp"
+            android:background="@color/green"
+            android:elevation="0.01sp"
+            android:text="Re-Enter New Password"
+            android:textColor="@color/white"
+            android:textSize="20sp"></TextView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:layout_marginHorizontal="50dp"
+            android:id="@+id/et_Renewpassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+
+        <ImageButton
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:id="@+id/btn_Change"
+            android:layout_width="124dp"
+            android:layout_height="56dp"
+            android:background="@drawable/roundshapebutton"
+            android:src="@drawable/green_arrow_button" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:padding="20dp"
+        android:background="@color/white"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="About us!"
+            android:textSize="20sp"/>
+    </LinearLayout>
+</LinearLayout>
