--- a/app/src/main/res/layout/report_activity.xml
+++ b/app/src/main/res/layout/report_activity.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,10 +9,6 @@
     android:paddingTop="0dp"
     android:paddingRight="0dp"
     android:paddingBottom="0dp">
-    <!--
-    tools:context="com.example.uploadimage.MainActivity">
-    -->
-
 
     <ImageView
         android:id="@+id/image"
@@ -34,123 +28,92 @@
         android:textColor="@color/green"
         android:textSize="18sp" />
 
-    <!--    <LinearLayout-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="horizontal">-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/textView4"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:text="Size:"-->
-    <!--            android:textSize="24sp" />-->
-
-    <!--        <RadioGroup-->
-    <!--            android:id="@+id/RadioGroup_Size"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent">-->
-
-    <!--            <RelativeLayout-->
-    <!--                android:layout_width="match_parent"-->
-    <!--                android:layout_height="match_parent">-->
-
-    <!--                <RadioButton-->
-    <!--                    android:id="@+id/radioButton_Small"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="Small" />-->
-
-    <!--                <RadioButton-->
-    <!--                    android:id="@+id/radioButton_Medium"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_toRightOf="@id/radioButton_Small"-->
-    <!--                    android:text="Medium" />-->
-
-    <!--                <RadioButton-->
-    <!--                    android:id="@+id/radioButton_Large"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_toRightOf="@id/radioButton_Medium"-->
-    <!--                    android:text="Large" />-->
-    <!--            </RelativeLayout>-->
-    <!--        </RadioGroup>-->
-
-    <!--    </LinearLayout>-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/editText_Material"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:ems="10"-->
-    <!--        android:inputType="textPersonName" />-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/editText_NumberOfPeople"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:ems="10"-->
-    <!--        android:inputType="number" />-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/editText_Note"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:ems="10"-->
-    <!--        android:inputType="textPersonName" />--><![CDATA[
-
-    -->
-
-]]><!--    <EditText-->
-    <!--        android:id="@+id/etSize"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:hint="Size"-->
-    <!--        android:imeOptions="actionDone"/>-->
-
-    <TextView
-        android:id="@+id/textView_Size"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:text="Size: "
-        android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:orientation="horizontal"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="46dp">
+
+        <TextView
+            android:layout_weight="1"
+            android:id="@+id/textView_Size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="Size: "
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:orientation="horizontal">
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioButton_Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Small"
+                    android:layout_marginRight="17dp"/>
+
+                <RadioButton
+                    android:id="@+id/radioButton_Large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Big" />
+            </RadioGroup>
+        </LinearLayout>
+    </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center|center_horizontal|center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="46dp">
 
-        <RadioGroup
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:text="Biodegradable: "
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/radioButton_Small"
+            <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Small" />
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioButton_biod"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Yes"
+                    android:layout_marginRight="30dp"/>
 
-            <RadioButton
-                android:id="@+id/radioButton_Medium"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Medium" />
-
-            <RadioButton
-                android:id="@+id/radioButton_Large"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Big" />
-        </RadioGroup>
+                <RadioButton
+                    android:id="@+id/radioButton_nonbiod"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="No" />
+            </RadioGroup>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -174,57 +137,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="41dp"
-            android:layout_marginRight="50dp"
-            android:imeOptions="actionDone"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView_NumberOfPeople"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="Number Of People:"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/etNumberOfPeople"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="50dp"
-            android:ems="10"
-            android:inputType="number"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView_Detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="53dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="Detail: "
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <EditText
-            android:id="@+id/etCaption"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="49dp"
             android:layout_marginRight="50dp"
             android:imeOptions="actionDone"
             android:textSize="14sp" />
