--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -119,7 +119,7 @@
             android:id="@+id/tb_people"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="People : "
+            android:text="Biod : "
             android:layout_marginLeft="50dp"
             android:textColor="@color/white" />
 
@@ -131,7 +131,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@id/tb_material"
-            android:text="People"
+            android:text="Biod"
             android:textColor="@color/white"
             android:textSize="18dp" />
 
